--- a/templates/employees.html
+++ b/templates/employees.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <!-- Links to Bootstrap (from base.html) and our new theme -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/employee_card_theme.css') }}">
-<script src="{{ url_for('static', filename='js/employees.js') }}"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/employee.css') }}">
+<script src="{{ url_for('static', filename='js/emp.js') }}"></script>
 
 <div class="container-fluid py-4">
 
@@ -147,3 +147,4 @@
 
 </div>
 {% endblock %}
+
