--- a/templates/employee_details.html
+++ b/templates/employee_details.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/employee_card_theme.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/employee.css') }}">
 <style>
   /* Page-specific style for the header */
   .detail-header-bg {
