--- a/templates/edit_employee.html
+++ b/templates/edit_employee.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/employee_card_theme.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/employee.css') }}">
 <!-- This JS file handles validation -->
 <script src="{{ url_for('static', filename='js/employee_edit.js') }}"></script>
 
@@ -139,3 +139,4 @@
   });
 </script>
 {% endblock %}
+
