--- a/templates/employees.html
+++ b/templates/employees.html
@@ -15,7 +15,7 @@
   <!-- 1. PAGE HEADER -->
   <div class="page-header-dark">
     <h2>Employee Management</h2>
-    <a href="{{ url_for('add_employee_form') }}" class="btn btn-primary">
+    <a href="{{ url_for('add_employee') }}" class="btn btn-primary">
       <i class="bi bi-plus-lg me-1"></i> Add New Employee
     </a>
   </div>
@@ -169,3 +169,4 @@
 
 </div>
 {% endblock %}
+
